BGE Python - Radar and Ray sensor wrong AXIS constants wrong defined #36503

Closed
opened 2013-08-18 18:58:18 +02:00 by Jorge Bernal · 4 comments
Member

%%%Taken into account the BGE Python 2.68.2 documentation thats says:

Raysensor:
.....
axis
The axis the ray is pointing on.

Type : integer from 0 to 5
KX_RAY_AXIS_POS_X
KX_RAY_AXIS_POS_Y
KX_RAY_AXIS_POS_Z
KX_RAY_AXIS_NEG_X
KX_RAY_AXIS_NEG_Y
KX_RAY_AXIS_NEG_Z

and also

Radar sensor:
.....
axis
The axis on which the radar cone is cast.

Type : integer from 0 to 5
KX_RADAR_AXIS_POS_X,
KX_RADAR_AXIS_POS_Y,
KX_RADAR_AXIS_POS_Z,
KX_RADAR_AXIS_NEG_X,
KX_RADAR_AXIS_NEG_Y,
KX_RADAR_AXIS_NEG_Z

if you execute a python script as following:

Set the axis of the radar cone.


import bge module

import bge

get the controller

cont = bge.logic.getCurrentController()

  • get the sensor attached to the controller

  • my sensor is named sensor
    sen = cont.sensors["sensor"]

  • set the axis of the radar cone

  • negative X axis is 3
    sen.axis = bge.logic.KX_RADAR_AXIS_NEG_X

print (sen.axis)


The result is 4 (should be 3 according to BGE Python 2.68.2 documentation)

and if you use bge.logic.KX_RADAR_AXIS_NEG_Y
then the result is 3 (should be 4 according to BGE Python 2.68.2 documentation)

The same occurs for the Ray sensor.

Also for the Ray sensor if you use bge.logic.KX_RAY_AXIS_POS_X the result is 1 (should be 0 according to BGE Python 2.68.2 documentation)
and if you use bge.logic.KX_RAY_AXIS_POS_Y then the result is 0 (should be 1 according to BGE Python 2.68.2 documentation)

I have summitted a patch.

Regards,
lordloki

%%%

%%%Taken into account the BGE Python 2.68.2 documentation thats says: Raysensor: ..... axis The axis the ray is pointing on. Type : integer from 0 to 5 KX_RAY_AXIS_POS_X KX_RAY_AXIS_POS_Y KX_RAY_AXIS_POS_Z KX_RAY_AXIS_NEG_X KX_RAY_AXIS_NEG_Y KX_RAY_AXIS_NEG_Z and also Radar sensor: ..... axis The axis on which the radar cone is cast. Type : integer from 0 to 5 KX_RADAR_AXIS_POS_X, KX_RADAR_AXIS_POS_Y, KX_RADAR_AXIS_POS_Z, KX_RADAR_AXIS_NEG_X, KX_RADAR_AXIS_NEG_Y, KX_RADAR_AXIS_NEG_Z if you execute a python script as following: **Set the axis of the radar cone.** ``` ``` # import bge module import bge # get the controller cont = bge.logic.getCurrentController() - get the sensor attached to the controller - my sensor is named sensor sen = cont.sensors["sensor"] - set the axis of the radar cone - negative X axis is 3 sen.axis = bge.logic.KX_RADAR_AXIS_NEG_X print (sen.axis) **** The result is 4 (should be 3 according to BGE Python 2.68.2 documentation) and if you use bge.logic.KX_RADAR_AXIS_NEG_Y then the result is 3 (should be 4 according to BGE Python 2.68.2 documentation) The same occurs for the Ray sensor. Also for the Ray sensor if you use bge.logic.KX_RAY_AXIS_POS_X the result is 1 (should be 0 according to BGE Python 2.68.2 documentation) and if you use bge.logic.KX_RAY_AXIS_POS_Y then the result is 0 (should be 1 according to BGE Python 2.68.2 documentation) I have summitted a patch. Regards, lordloki %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Moved from Blender 2.6 Bug Tracker to Patches%%%

%%%Moved from Blender 2.6 Bug Tracker to Patches%%%

%%%applied r59325.%%%

%%%applied r59325.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36503
No description provided.