patch [#36503] BGE Python - Radar and Ray sensor wrong AXIS constants wrong defined from Jorge Bernal (lordloki)